Fixed loggin properties

--- a/src/test/resources/log4j-debug.properties
+++ b/src/test/resources/log4j-debug.properties
@@ -1,6 +1,7 @@
 log4j.rootLogger=info,ca
-log4j.logger.com.applause.auto.framework=debug
-log4j.logger.com.applause.auto=debug
+log4j.logger.com.stas.mobile.testing.application=debug
+log4j.logger.com.stas.mobile.testing.framework.device=debug
+
 
 # CA Buffer Appender
 log4j.appender.ca=org.apache.log4j.ConsoleAppender
