--- a/src/test/resources/log4j.properties
+++ b/src/test/resources/log4j.properties
@@ -1,6 +1,5 @@
 log4j.rootLogger=info,ca
-log4j.logger.com.applause.framework=debug
-log4j.logger.com.applause.wholefoods.auto.cucumber=info
+log4j.logger.com.stas.mobile.testing.application=info
 
 
 # CA Buffer Appender
